--- a/stm_workshop/lib/state_machine/CMakeLists.txt
+++ b/stm_workshop/lib/state_machine/CMakeLists.txt
@@ -2,7 +2,7 @@ set(target state_machine)
 file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
 file(GLOB code "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 add_library(${target} STATIC ${headers} ${code})
-target_include_directories(${target}
-    INTERFACE "${CMAKE_SOURCE_DIR}/lib"
+include_directories(${target}
+    PRIVATE "${CMAKE_SOURCE_DIR}/lib"
     "${CMAKE_CURRENT_SOURCE_DIR}"
 )
