--- a/02-basiccpp/test/CMakeLists.txt
+++ b/02-basiccpp/test/CMakeLists.txt
@@ -3,11 +3,11 @@ file(GLOB code "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 add_executable(${target} ${code})
 target_include_directories(${target}
     PRIVATE
-    "${CMAKE_SOURCE_DIR}/src"
+    "${CMAKE_SOURCE_DIR}/lib"
     "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 target_link_libraries(${target}
     GTest::gtest_main
-    workshop
+    workshop-lib
 )
 gtest_discover_tests(${target})
