Fixed build for max

--- a/navigation_onboarding/CMakeLists.txt
+++ b/navigation_onboarding/CMakeLists.txt
@@ -1,33 +1,14 @@
 cmake_minimum_required(VERSION 3.22.0)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# -------------------------------------------------- #
-# LIB HELPER                                         #
-# -------------------------------------------------- #
-set(ALL_LIBS "navigation")
-function(make_lib target, include_path)
-    file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
-    file(GLOB code "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
-    add_library(${target} STATIC ${headers} ${code})
-    target_include_directories(${target}
-        INTERFACE ${include_path}
-    )
-    set(link_libs ${ALL_LIBS})
-    list(REMOVE_ITEM link_libs "${target}")
-    target_link_libraries(${target} ${link_libs})
-endfunction()
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wpedantic ")
+set(CMAKE_CXX_LINKER_FLAGS "${CMAKE_CXX_LINKER_FLAGS} -stdlib=libc++")
 
-
-# -------------------------------------------------- #
-# BUILD LIBS                                         #
-# -------------------------------------------------- #
-
-set(project nav_onboard)
+set(project nav_workshop)
 project(${project} CXX)
 
-set(target "nav")
-add_executable(${target} ${CMAKE_SOURCE_DIR}/src/main.cpp)
+add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
 add_subdirectory(${CMAKE_SOURCE_DIR}/src)
-
-#add_subdirectory(navigation)
-target_link_libraries(${target} navigation)
