--- a/navigation_onboarding/lib/CMakeLists.txt
+++ b/navigation_onboarding/lib/CMakeLists.txt
@@ -1,12 +1,8 @@
-set(target nav_exec)
+set(target nav_core)
 file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
 file(GLOB code "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
-add_executable(${target} ${headers} ${code})
+add_library(${target} STATIC ${headers} ${code})
 target_include_directories(${target}
-    INTERFACE
-    "${CMAKE_SOURCE_DIR}/lib"
+    INTERFACE "${CMAKE_SOURCE_DIR}/lib"
     "${CMAKE_CURRENT_SOURCE_DIR}"
-)
-target_link_libraries(${target}
-    nav_core
 )
